--- a/Homework/hw_proj/package.json
+++ b/Homework/hw_proj/package.json
@@ -13,7 +13,10 @@
     "gulp-sass": "^5.1.0"
   },
   "dependencies": {
+    "gulp-changed": "^4.0.3",
     "gulp-clean-css": "^4.3.0",
+    "gulp-image": "^6.3.1",
+    "gulp-imagemin": "^7.0.0",
     "gulp-images": "^0.0.3",
     "gulp-mode": "^1.1.0",
     "gulp-sourcemaps": "^3.0.0",
